[package]
name = "database-bug"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "database-bug"
path = "src/main.rs"

[dependencies]
futures-util = { version = "0.3.21", default-features = false }
tempfile = "3.2"
tokio = { version = "1.24.1", features = ["full"] }
tokio-stream = "0.1.9"
tokio-util = "0.7.4"
#sqlx = { path = "~/work/sqlx", default-features = false, features = ["runtime-tokio-rustls", "sqlite"]  }
sqlx = { git = "https://github.com/launchbadge/sqlx", default-features = false, features = ["runtime-tokio-rustls", "sqlite"]  }
